# claude-atlas

./: .gitignore  LICENSE  README.md  claudeAtlas.excalidraw
prompts/: Main_quest_brainstorm_prompt.js  amend_itinerary.txt  detailed_itinerary_afternoon  detailed_itinerary_afternoon.txt  detailed_itinerary_morning  detailed_itinerary_morning.txt  main_quest.txt  main_quest_brainstorm.txt  old_amend_itinerary.txt
src/backend/: main.py  pyproject.toml
src/backend/api/: api.py
src/backend/api/core/: agent.py  formatter.py  prompts.py
src/backend/api/endpoints/: predict.py  routes.py
src/backend/api/schemas/: chat.py  gmail.py  itinerary.py  quest.py  request_response.py
src/frontend/: next.config.js  package-lock.json  package.json  tsconfig.json
src/frontend/components/: QuestCard.module.scss  QuestCard.tsx  SimpleImage.module.scss  SimpleImage.tsx
src/frontend/pages/: App.module.scss  _app.tsx
src/frontend/pages/itinerary/: index.module.scss  index.tsx
src/frontend/pages/landing/: index.module.scss  index.tsx
src/frontend/pages/main-quests/: index.module.scss  index.tsx
src/frontend/pages/prototype/: index.module.scss  index.tsx
src/frontend/store/: accessor.ts  creator.ts  index.ts  root-reducer.ts
src/frontend/store/services/: base-query.ts  calendar.ts  chat.ts  index.ts  quests.ts
src/frontend/styles/: global.scss
src/frontend/types/: index.ts
